Fix spacing between Project Card logo and title

--- a/src/app/elements/project-card/project-card.component.css
+++ b/src/app/elements/project-card/project-card.component.css
@@ -1,5 +1,6 @@
 img.title-img {
     height: 40px;
+    margin-right: 8px;
 }
 
 mat-card-content {
